<resources>
    <string name="app_name">ConfControl</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_settings">settingsActivity</string>
    <string name="title_activity_contact">contactActivity</string>
    <string name="action_main">Inicio</string>
    <string name="on_string">Encender\nEquipos</string>
    <string name="off_string">Apagar\nEquipos</string>
    <string name="presentation_string">Iniciar\nPresentacion</string>
    <string name="conference_control_string">Control\nDe\Conferencia</string>
    <string name="start_call_button_string">Iniciar Llamada</string>
    <string name="titulo1_string">Nombre</string>
    <string name="titulo2_string">Dirección IP</string>
    <string name="titulo3_string">Tipo de Conexión</string>
    <string name="titulo4_string">Seleccionar</string>
    <string name="title_activity_call_control">callControl</string>
    <string name="hang_up_button_string">Terminar\nLlamada</string>
    <string name="accept_call_string">Aceptar\nLlamada</string>
    <string name="decline_call_string">Rechazar\nLlamada</string>
    <string name="cancel_contact_string">Regresar</string>
    <string name="title_activity_incoming_call_ctrl">incomingCallCtrl</string>
    <string name="title_activity_welcome_msg">welcomeMsg</string>
    <string name="pantalla_inicial_string">PANTALLA INICIAL</string>
    <string name="sala_videoconf_string">Sala de Videoconferencia</string>
    <string name="textview3">2)Ingresar a control de cámara para ajustar la posición de la cámara</string>
    <string name="sala_nombre_string">Sala</string>
    <string name="saveString">Guardar</string>
    <string name="returnString">Regresar</string>
    <string name="title_activity_present_mode">presentModeActivity</string>
    <string name="contact_view_title_string">SALAS y OFICINAS DE VIDEOCONFERENCIA</string>
    <string name="contact_instruction1_string">Seleccione las salas a las que requiere conectarse,</string>
    <string name="contact_instruction2_string">luego presione CREAR CONFERENCIA</string>
    <string name="contact_instruction3_string">Seleccione una o más salas y luego presione CREAR CONFERENCIA</string>
    <string name="call_control_string1">Antes de salir de la Sala, por favor</string>
    <string name="call_control_string2">apagar la luz de la sala y</string>
    <string name="call_control_string3">dejar las sillas ordenadas</string>
    <string name="title_activity_settings_pwd">settingsPwdActivity</string>
    <string name="pwd_title_string">Por Favor ingresar su contraseña</string>
    <string name="input_pwd_button_string">Ingresar</string>
    <string name="pwd_back_button_string">Regresar</string>
    <string-array name="tvOptions">
        <item>Samsung</item>
        <item>LG Grupo 1</item>
        <item>LG Grupo 2</item>
    </string-array>
</resources>