<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#2a2a2a"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd_title_string"
            android:textColor="@android:color/white"
            android:textSize="48sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/settingsPwdEdit"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp">

            <Button
                android:id="@+id/inputPwdButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_pwd_button_string"/>
            <Button
                android:id="@+id/pwdBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd_back_button_string"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>